# pawtner

./: .gitattributes  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: local.py  settings.py  urls.py
frontend/: pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/lib/: account_screen.dart  api_endpoints.dart  auth_provider.dart  dashboard_screen.dart  log_screen.dart  login_screen.dart  main.dart  main2.dart  models.dart  register_screen.dart  route_generator.dart  settings_screen.dart
frontend/lib/new/: api_endpoints.dart  route_generator.dart
frontend/lib/new/screens/: auth_provider.dart  dashboard_screen.dart  login_screen.dart  register_screen.dart
frontend/lib/screens/: dashboard_screen.dart
frontend/lib/screens/dashboard/: family_screen.dart  home_screen.dart  pets_screen.dart  profile_screen.dart  (+1 more)
frontend/test/: widget_test.dart
pawtner/: urls.py
pawtner/events/: apps.py
pawtner/family/: apps.py  models.py  serializers.py  urls.py  views.py
pawtner/family/migrations/: 0001_initial.py  0002_initial.py  0003_family_admins.py
pawtner/notifications/: apps.py  models.py
pawtner/notifications/migrations/: 0001_initial.py
pawtner/pets/: apps.py  models.py  serializers.py  species.py  urls.py  views.py
pawtner/pets/migrations/: 0001_initial.py  0002_initial.py
pawtner/profile/: apps.py  models.py
pawtner/user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
pawtner/user/migrations/: 0001_initial.py
tests/: conftest.py
tests/user/: test_login.py  test_register.py
(+2 files in other folders)
